--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -50,10 +50,13 @@
         </div>
       </div>
       <div class="menu_legal column-flexstart">
-        <div class="menu_privacy_cont row-center" onclick="openlegal()">
+        <div
+          class="menu_privacy_cont row-center privacy_effect"
+          onclick="openPrivacy()"
+        >
           <a class="menu_privacy_text font400">Privacy Policy</a>
         </div>
-        <div class="menu_legal_cont row-center" onclick="openlegal()">
+        <div class="menu_legal_cont row-center" onclick="openLegal()">
           <a class="menu_legal_text font400">Legal notice</a>
         </div>
       </div>
