--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -25,7 +25,7 @@
 }
 
 .summary_user {
-    width: fit-content;
+    width: max-content;
     height: 77px;
     font-weight: 700 !important;
     font-size: 64px;
