--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -17,8 +17,8 @@
     <div class="header_popup_logout column-flex-start d-none" id="popUpLogOut">
         <span class="header_popup row-center-center" >
             <a class="header_logout_text_resp font400" onclick="openHelp()">Help</a>
-            <a class="header_logout_text_resp font400" onclick="openlegal()">Legal notice</a>
-            <a class="header_logout_text_resp font400">Privacy Policy</a>
+            <a class="header_logout_text_resp font400" onclick="openLegal()">Legal notice</a>
+            <a class="header_logout_text_resp font400" onclick="openPrivacy()">Privacy Policy</a>
             <a class="header_logout_text font400" onclick="logOut()">Log out</a>
         </span>
     </div>
