--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -23,40 +23,47 @@
     <div class="menu_principal column-center menu_large">
       <div class="menu_links column-center-flexstart">
         <div
-          class="menu_all summary_background row-center"
+          class="menu_all blue_select_summ row-center"
           onclick="openSummary()"
           id="summary"
         >
           <img class="icon_summary" src="assets/img/iconSummary.svg" />
+          <img class="icon_summary_blue" src="assets/img/summary_blue.svg" />
           <a class="text_menu font400">Summary</a>
         </div>
         <div
-          class="menu_all row-center addTask_background"
+          class="menu_all row-center blue_select_add"
           onclick="openAddTask()"
         >
           <img class="icon_addTask" src="assets/img/iconAddTask.svg" />
+          <img class="icon_addTask_blue" src="assets/img/task_blue.svg" />
           <a class="text_menu font400">Add Task</a>
         </div>
-        <div class="menu_all row-center board_background" onclick="openBoard()">
+        <div class="menu_all row-center blue_select_bo" onclick="openBoard()">
           <img class="icon_board" src="assets/img/iconBoard.svg" />
+          <img class="icon_board_blue" src="assets/img/board_blue.svg" />
           <a class="text_menu font400">Board</a>
         </div>
         <div
-          class="menu_all row-center contacts_background"
+          class="menu_all row-center blue_select_con"
           onclick="openContacts()"
         >
           <img class="icon_contacts" src="assets/img/iconContacts.svg" />
+          <img class="icon_contacts_blue" src="assets/img/contacts_blue.svg" />
           <a class="text_menu font400">Contacts</a>
         </div>
       </div>
       <div class="menu_legal column-flexstart">
         <div
-          class="menu_privacy_cont row-center privacy_effect"
+          class="menu_privacy_cont row-center blue_privacy"
           onclick="openPrivacy()"
         >
           <a class="menu_privacy_text font400">Privacy Policy</a>
         </div>
-        <div class="menu_legal_cont row-center" onclick="openLegal()">
+        <div
+          class="blue_legal menu_legal_cont row-center"
+          onclick="openLegal()"
+        >
           <a class="menu_legal_text font400">Legal notice</a>
         </div>
       </div>
