--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -3,6 +3,10 @@ body {
     overflow: hidden;
 }
 
+.blue_select_bo {
+    background-color: #D2E3FF;
+}
+
 .board_container {
     width: 100%;
     height: 100vh;
@@ -389,6 +393,22 @@ body {
 
     .board_container {
         align-items: center !important;
+    }
+
+    .blue_select_bo {
+        background-color: transparent;
+    }
+
+    .blue_select_bo a {
+        color: #4589FF !important;
+    }
+
+    .icon_board_blue {
+        display: flex !important;
+    }
+
+    .icon_board {
+        display: none;
     }
 }
 
