--- a/assets/css/miniPopups.css
+++ b/assets/css/miniPopups.css
@@ -216,13 +216,12 @@
 }
 
 .pop_up_contact_created_text {
-    width: 292px;
-    height: 28px;
     font-size: 23px;
     color: #FFFFFF;
 }
 
 .new_contact_pop_ups {
+    width: -webkit-fill-available;
     display: flex;
     justify-content: center;
 }
@@ -253,6 +252,19 @@
         width: 210px;
         height: 28px;
     }
+
+    .pop_up_contact_created {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 226px;
+        height: 54px;
+    }
+
+    .pop_up_contact_created_text {
+        font-size: 14px;
+    }
+
 
 }
 
@@ -411,4 +423,6 @@
         padding-left: 20px;
         padding-right: 20px;
     }
+
+
 }
