--- a/assets/css/addTask.css
+++ b/assets/css/addTask.css
@@ -22,7 +22,8 @@ body {
     bottom: 0;
     padding-bottom: 20px;
     overflow-y: auto;
-
+    overflow-x: hidden;
+    padding-right: 20px;
 }
 
 .add_task_popUp_close_PU {
@@ -266,7 +267,7 @@ body {
 }
 
 .add_task_selectCat {
-    padding: 11px 21px;
+    padding: 10px 21px;
     gap: 10px;
     isolation: isolate;
     width: 381px;
@@ -488,6 +489,8 @@ body {
     width: -webkit-fill-available;
     height: 61px;
     order: 20;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
 .add_task_buttons_bottom_resp {
@@ -770,7 +773,7 @@ body {
     }
 
     .add_task_selectCat {
-        padding: 12px 16px;
+        padding: 10px 16px;
         width: 260px;
     }
 
