--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -10,7 +10,8 @@ body {
 .board_container {
     width: 100%;
     height: 100vh;
-
+    gap: 30px;
+    overflow: auto;
 }
 
 .board_head {
@@ -18,10 +19,9 @@ body {
     position: relative;
     width: 500px;
     height: 51px;
-    top: 50px;
+    padding-top: 160px;
     z-index: 2;
-    padding-left: 10px;
-    padding-left: 250px;
+    padding-left: 280px;
 }
 
 .add_task_popUp_close_PU {
@@ -101,8 +101,8 @@ body {
     gap: 26px;
     position: relative;
     width: 1078px;
-    top: 113px;
-    padding-left: 250px;
+    padding-left: 280px;
+    overflow-y: auto;
 }
 
 .board_columns {
@@ -306,12 +306,6 @@ body {
     gap: 25px;
 }
 
-@media (height < 900px) {
-
-    .board_container {
-        padding-top: 135px;
-    }
-}
 
 @media (height < 650px) {
     .board_head {
@@ -331,7 +325,6 @@ body {
         width: 550px;
         gap: 35px;
         flex-wrap: wrap;
-        top: 100px;
     }
 
     .board_columns_column {
@@ -364,21 +357,21 @@ body {
 
 @media (width < 1200px) {
     .board_head {
-        padding-left: 200px;
+        padding-left: 240px;
     }
 
     .board_columns_container {
-        padding-left: 200px;
+        padding-left: 240px;
     }
 }
 
 @media (width < 1000px) {
     .board_head {
-        padding-left: 155px;
+        padding-left: 175px;
     }
 
     .board_columns_container {
-        padding-left: 155px;
+        padding-left: 175px;
     }
 }
 
@@ -414,17 +407,16 @@ body {
 
 @media (width < 600px) {
     .board_head {
-        top: 10px;
+        padding-top: 110px;
     }
 
-    .board_columns_container {
-        top: 35px;
+    .edit_task_container {
+        width: -webkit-fill-available;
     }
 }
 
 @media (width < 550px) {
     .board_head {
-        top: 110px;
         width: 100% !important;
     }
 
@@ -433,7 +425,6 @@ body {
     }
 
     .board_columns_container {
-        top: 150px;
         width: 300px;
         overflow-y: scroll;
     }
