--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -42,6 +42,10 @@ body {
     cursor: pointer;
 }
 
+.menu_all:hover {
+    background: #E3EEFF;
+}
+
 .icon_summary {
     width: 24px;
     height: 24px;
