--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -46,6 +46,12 @@
           id="adddTaskButtonsResp"
         >
           <button
+            class="add_task_buttons_clear row-center-center"
+            onclick="clearTask()"
+          >
+            <a class="add_task_clear_text font400">Clear X</a>
+          </button>
+          <button
             class="add_task_buttons_create row-center-center"
             onclick="createATaskPU()"
           >
