--- a/assets/css/models.css
+++ b/assets/css/models.css
@@ -142,6 +142,19 @@
     gap: 10px;
 }
 
+::-webkit-scrollbar {
+    width: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(228, 222, 222);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(188, 187, 187);
+}
+
+
 @media (width < 700px) {
     .inputs {
         width: 330px;
