--- a/assets/css/models.css
+++ b/assets/css/models.css
@@ -143,16 +143,9 @@
 }
 
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 0;
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: rgb(228, 222, 222);
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(188, 187, 187);
-}
 
 
 @media (width < 700px) {
